focus-visited-nth-child

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
             font-size: 50px;
             background: yellowgreen;
         }
+        input:focus{
+            text-align: center;
+            color: crimson;
+            font-size: 30px;
+        }
+        li:nth-child(2n+1){background-color: darkcyan;} 
+        a:visited{
+            color: darkgoldenrod;
+        }      
     </style>
 </head>
 <body>
@@ -20,5 +29,19 @@
     <h1>Normal Class</h1>
     <h1 class="special-effect">Bodra Class</h1>
 
+    <input type="text">
+    <br>
+    <input type="password">
+    <ul>
+        <li>alia</li>
+        <li>dalia</li>
+        <li>maliha</li>
+        <li>kalia</li>
+        <li>falia</li>
+        <li>haria</li>
+        <li>calia</li>
+    </ul>
+    <a href="https:youtube.com/c/jhankar">rifashopbd</a>
+    <a href="https://ashraf-git.github.io/web-portfolio/">web-portfolio</a>
 </body>
 </html>
