use emoji before after

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             content: " bye";
             background: red;
         }
+        p::before{
+            content: "❤️";
+            color:darkturquoise;
+        }
     </style>
 </head>
 <body>
@@ -26,13 +30,13 @@
     <br>
     <input type="password">
     <ul>
-        <li>alia</li>
-        <li>dalia</li>
-        <li>maliha</li>
-        <li>kalia</li>
-        <li>falia</li>
-        <li>haria</li>
-        <li>calia</li>
+        <p>alia</p>
+        <p>dalia</p>
+        <p>maliha</p>
+        <p>kalia</p>
+        <p>falia</p>
+        <p>haria</p>
+        <p>calia</p>
     </ul>
     <a href="https:youtube.com/c/jhankar">rifashopbd</a>
     <a href="https://ashraf-git.github.io/web-portfolio/">web-portfolio</a>
