--- a/power.html
+++ b/power.html
@@ -19,5 +19,9 @@
 </head>
 <body>
     <h1 style="color: darkslateblue;" id="barak" class="name">Wecomt to Barak Obama</h1>
+
+
+    <!--home work-->
+    <!-- overflow, media quary, css selector, css3, animation -->
 </body>
 </html>
